hphp/hack/test/typecheck/global_const.php.exp
File "global_const.php", line 5, characters 10-10:
Invalid return type (Typing[4110])
File "global_const.php", line 4, characters 18-21:
Expected bool
File "global_const.php", line 3, characters 7-9:
But got int
