hphp/hack/test/typecheck/global_const.php
<?hh // strict

const int X = 0;
function test(): bool {
  return X;
}
